refactor from JPA Query Method to JPA Specification