@@ -14,6 +14,7 @@ import com.langthang.repository.AccountRepository;
 import com.langthang.repository.CategoryRepository;
 import com.langthang.repository.PostRepository;
 import com.langthang.services.IPostServices;
+import com.langthang.specification.PostSpec;
 import com.langthang.utils.AssertUtils;
 import com.langthang.utils.SecurityUtils;
 import lombok.RequiredArgsConstructor;
@@ -25,11 +26,15 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+
+import static com.langthang.specification.AccountSpec.hasEmail;
+import static com.langthang.specification.PostSpec.*;
 
 @RequiredArgsConstructor(onConstructor_ = {@Autowired})
 @Service
@@ -44,7 +49,7 @@ public class PostServicesImpl implements IPostServices {
     @Override
     public PostResponseDTO addNewPostOrDraft(PostRequestDTO postRequestDTO, String authorEmail, boolean isPublish) {
         Post post = new Post(postRequestDTO.getTitle(), postRequestDTO.getContent(), postRequestDTO.getPostThumbnail());
-        post.setAccount(accRepo.findAccountByEmail(authorEmail));
+        post.setAccount(accRepo.getByEmail(authorEmail));
         post.setPublished(isPublish);
         post.setPostCategories(getCategories(postRequestDTO));
 
@@ -57,19 +62,10 @@ public class PostServicesImpl implements IPostServices {
     }
 
     @Override
-    public PostResponseDTO getPostDetailById(int postId) {
-        Post post = postRepo.findPostByIdAndPublished(postId, true);
-        AssertUtils.notNull(post, new NotFoundError("Post not found!"));
-
-        return entityToDTO(post);
-    }
-
-    @Override
     public PostResponseDTO getPostDetailBySlug(String slug) {
-        Post post = postRepo.findPostBySlugAndPublished(slug, true);
-        AssertUtils.notNull(post, new NotFoundError("Post not found!"));
-
-        return entityToDTO(post);
+        return postRepo.findOne(hasSlug(slug).and(isPublished()))
+                .map(this::entityToDTO)
+                .orElseThrow(() -> NotFoundError.build(Post.class));
     }
 
     @Override
@@ -82,18 +78,18 @@ public class PostServicesImpl implements IPostServices {
 
     @Override
     public List<PostResponseDTO> getPreviewPost(Pageable pageable) {
-        Page<Post> postResponse = postRepo.findByAccountNotNullAndPublishedIsTrue(pageable);
-
-        return postResponse.map(this::entityToDTO).getContent();
+        return postRepo.findAll(PostSpec.isPublished(), pageable)
+                .map(this::entityToDTO)
+                .getContent();
     }
 
     @Override
     public List<PostResponseDTO> findPostByKeyword(String keyword, Pageable pageable) {
         keyword = StringUtils.join(StringUtils.split(keyword, " "), " | ");
 
-        List<Post> posts = postRepo.searchByKeyword(keyword, pageable);
-
-        return posts.stream().map(this::entityToDTO).toList();
+        return postRepo.searchByKeyword(keyword, pageable)
+                .map(this::entityToDTO)
+                .toList();
     }
 
     @Override
@@ -118,35 +114,27 @@ public class PostServicesImpl implements IPostServices {
 
     @Override
     public List<PostResponseDTO> getAllPostOfUser(int accountId, Pageable pageable) {
-        accRepo.findById(accountId).orElseThrow(() -> new NotFoundError("Account not found"));
+        Account account = accRepo.findById(accountId)
+                .orElseThrow(() -> new NotFoundError(Account.class));
 
-        Page<Post> allPostOfUser = postRepo.findByAccount_IdAndPublishedIsTrue(accountId, pageable);
-
-        return allPostOfUser.map(this::entityToDTO).getContent();
+        return postRepo.findAll(hasAuthorId(account.getId()).and(isPublished()), pageable)
+                .map(this::entityToDTO)
+                .getContent();
     }
 
     @Override
-    public List<PostResponseDTO> getAllPostOfUser(String accountEmail, Pageable pageable) {
-        Account account = accRepo.findAccountByEmail(accountEmail);
-        AssertUtils.notNull(account, new NotFoundError("Account not found"));
+    public List<PostResponseDTO> getAllPostOfUser(String accountEmail, Pageable pageable, boolean isPublished) {
+        Account account = accRepo.findOne(hasEmail(accountEmail))
+                .orElseThrow(() -> new NotFoundError(Account.class));
 
-        Page<Post> allPostOfUser = postRepo.getAllByAccount_EmailAndPublishedIsTrue(accountEmail, pageable);
-
-        return allPostOfUser.map(this::entityToDTO).getContent();
-    }
-
-    @Override
-    public List<PostResponseDTO> getAllDraftOfUser(String accountEmail, Pageable pageable) {
-        Page<Post> allDraftOfUser = postRepo.getAllByAccount_EmailAndPublishedIsFalse(accountEmail, pageable);
-
-        return allDraftOfUser.map(this::entityToDTO).getContent();
+        return postRepo.findAll(hasAuthorId(account.getId()).and(publishStatusIs(isPublished)), pageable)
+                .map(this::entityToDTO)
+                .getContent();
     }
 
     @Override
     public List<PostResponseDTO> getBookmarkedPostOfUser(String accEmail, Pageable pageable) {
-        Page<Post> responseList = postRepo.getBookmarkedPostByAccount_Email(accEmail, pageable);
-
-        return responseList.map(p -> {
+        return postRepo.getBookmarkedPostByAccount_Email(accEmail, pageable).map(p -> {
             PostResponseDTO dto = entityToDTO(p);
             dto.setBookmarked(true);
             return dto;
@@ -155,18 +143,19 @@ public class PostServicesImpl implements IPostServices {
 
     @Override
     public PostResponseDTO getPostOrDraftContent(String slug, String authorEmail) {
-        Post post = postRepo.findPostBySlug(slug);
-
-        verifyResourceOwner(post, authorEmail);
-
-        return PostResponseDTO.toPostResponseDTO(post);
+        return postRepo.findOne(hasSlug(slug))
+                .map(p -> this.verifyResourceOwner(p, authorEmail))
+                .map(PostResponseDTO::toPostResponseDTO)
+                .orElseThrow(() -> new NotFoundError(Post.class));
     }
 
     @Override
     public void deletePostById(int postId, String authorEmail) {
-        Post post = postRepo.getReferenceById(postId);
-        verifyResourceOwner(post, authorEmail);
-        postRepo.delete(post);
+        postRepo.findById(postId)
+                .ifPresent(post -> {
+                    verifyResourceOwner(post, authorEmail);
+                    postRepo.delete(post);
+                });
     }
 
     @Override
@@ -187,19 +176,19 @@ public class PostServicesImpl implements IPostServices {
 
     @Override
     public List<PostResponseDTO> getAllPostOfCategory(int categoryId, Pageable pageable) {
-        Category category = categoryRepo.findById(categoryId).orElse(null);
-        AssertUtils.notNull(category, new NotFoundError("Category not found"));
+        Category category = categoryRepo.findById(categoryId)
+                .orElseThrow(() -> new NotFoundError(Category.class));
 
-        return postRepo.findPostByCategories(category, pageable)
+        return postRepo.getAllByPostCategoriesIn(Set.of(category), pageable)
                 .map(this::entityToDTO).getContent();
     }
 
     @Override
     public List<PostResponseDTO> getAllPostOfCategory(String slug, Pageable pageable) {
-        Category category = categoryRepo.findBySlug(slug);
-        AssertUtils.notNull(category, new NotFoundError("Category not found"));
+        Category category = categoryRepo.findBySlug(slug)
+                .orElseThrow(() -> new NotFoundError(Category.class));
 
-        return postRepo.findPostByCategories(category, pageable)
+        return postRepo.getAllByPostCategoriesIn(Set.of(category), pageable)
                 .map(this::entityToDTO).getContent();
     }
 
@@ -216,7 +205,8 @@ public class PostServicesImpl implements IPostServices {
     public XmlUrlSet genSiteMap() {
         final String HOST = "https://langthang.trinhdvt.tech";
         var sitemap = new XmlUrlSet();
-        postRepo.findAllByPublishedIsTrue()
+        postRepo.findAll(isPublished())
+                .parallelStream()
                 .map(p -> XmlUrlSet.XmlUrl.builder()
                         .loc(HOST + "/" + p.getAccount().getSlug() + "/" + p.getSlug())
                         .lastmod(DateFormatUtils.ISO_8601_EXTENDED_DATETIME_FORMAT.format(p.getPublishedDate()))
@@ -228,29 +218,28 @@ public class PostServicesImpl implements IPostServices {
 
     @Override
     public void deleteReportedPost(int postId, String adminEmail) {
-        Post post = postRepo.getReferenceById(postId);
-
-        try {
-            verifyResourceOwner(post, adminEmail);
-            postRepo.delete(post);
-
-        } catch (HttpError ex) {
-            if (post.isPublished()) {
-                boolean isReportPost = post.getPostReports().stream().anyMatch(rp -> !rp.isSolved());
-                if (isReportPost) {
-                    postRepo.delete(post);
-                    return;
+        postRepo.findById(postId).ifPresent(post -> {
+            try {
+                verifyResourceOwner(post, adminEmail);
+                postRepo.delete(post);
+            } catch (HttpError ex) {
+                if (post.isPublished()) {
+                    boolean isReportPost = post.getPostReports().stream().anyMatch(rp -> !rp.isSolved());
+                    if (isReportPost) {
+                        postRepo.delete(post);
+                        return;
+                    }
                 }
+                throw new UnauthorizedError("Permission denied");
             }
-            throw new UnauthorizedError("Permission denied");
-        }
+        });
     }
 
     private PostResponseDTO entityToDTO(Post post) {
         Account author = post.getAccount();
 
         AccountDTO authorDTO = AccountDTO.toBasicAccount(author);
-        authorDTO.setPostCount(postRepo.countByAccount_Id(author.getId()));
+        authorDTO.setPostCount(postRepo.count(hasAuthorId(author.getId())));
         authorDTO.setFollowCount(accRepo.countFollowing(author.getId()));
 
         PostResponseDTO postResponse = PostResponseDTO.toPostResponseDTO(post);
@@ -262,9 +251,8 @@ public class PostServicesImpl implements IPostServices {
 
     private Set<Category> getCategories(PostRequestDTO postDTO) {
         List<String> categoriesId = postDTO.getCategories();
-        if (categoriesId == null || categoriesId.isEmpty()) {
-            return Collections.emptySet();
-        }
+        if (CollectionUtils.isEmpty(categoriesId))
+            return Set.of();
 
         try {
             List<Integer> cateIdInt = categoriesId.stream().map(Integer::valueOf).toList();
@@ -283,9 +271,10 @@ public class PostServicesImpl implements IPostServices {
         return post;
     }
 
-    private void verifyResourceOwner(Post post, String authorEmail) {
+    private Post verifyResourceOwner(Post post, String authorEmail) {
         AssertUtils.notNull(post, new NotFoundError("Post not found"));
         AssertUtils.isTrue(post.getAccount().getEmail().equals(authorEmail), new UnauthorizedError("Post not found"));
+        return post;
     }
 
     private void updatePostContent(Post existingPost, PostRequestDTO requestDTO) {
